<resources>
    <string name="app_name">Ejercicio1RRLE</string>
    <string name="Version">Version 1.0</string>
    <string name="Autor">Rojas Ruiz Luis Enrique</string>
    <string name="Titulo1">Elige la formula</string>
    <string name="BotonCalcular">Calcular</string>
    <string name="Ohm">Ley de Ohm</string>
    <string name="Rectangulo">Área de Rectángulo</string>
    <string name="Newton">Segunda Ley de Newton</string>
    <string name="voltaje">V =</string>
    <string name="Intens">I =</string>
    <string name="ResOmh">El valor de la resistencia es:</string>
    <string name="Voltaje2">Voltaje</string>
    <string name="Intensidad">Corriente</string>
    <string name="H">h =</string>
    <string name="B">b =</string>
    <string name="Altura">Altura</string>
    <string name="Base">Base</string>
    <string name="ResRec">El valor del área es:</string>
    <string name="M">m =</string>
    <string name="A">a =</string>
    <string name="ResNewt">El valor de la fuerza es:</string>
    <string name="Masa">Masa</string>
    <string name="Aceleracion">Aceleración</string>
    <string name="Aviso">Se requiere que ingreses un valor</string>
    <string name="Bienvenida">Bienvenido</string>
    <string name="Menu">Menú</string>


</resources>